--- a/_posts/2022-03-08-D0UBLE-WAFFL3.md
+++ b/_posts/2022-03-08-D0UBLE-WAFFL3.md
@@ -1,8 +1,9 @@
 ---
-layout: post
+layout: default
 title:  "DOUBLE WAFFL3"
 date:   2022-03-08 12:47:20 -0500
 categories: jekyll update
+permalink: /double-waffle/
 ---
 ## Introduction
 
